// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseButton styles should render and match snapshot when not visible 1`] = `
.circuit-0 {
  cursor: pointer;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: #FAFBFC;
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
}

@media (min-width:960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
  class="circuit-0 circuit-1"
>
  <div
    role="presentation"
  >
    closeIcon.svg
  </div>
</button>
`;

exports[`CloseButton styles should render and match snapshot when visible 1`] = `
.circuit-0 {
  cursor: pointer;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: #FAFBFC;
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
  visibility: visible;
  opacity: 1;
}

@media (min-width:960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
  class="circuit-0 circuit-1"
>
  <div
    role="presentation"
  >
    closeIcon.svg
  </div>
</button>
`;
